fix overflow bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,10 +34,11 @@ main {
 .error-block {
   font-size: 0.8rem;
 }
+
 nav#breadcrumb {
   padding-left: 20px;
 }
 
-main {
-  overflow: auto;
+td {
+  word-break: break-all;
 }
